# EdgeDirectVO

./: .gitignore  CMakeLists.txt  README.md  associate.py  groundtruth_fr1desk2.txt  groundtruth_fr2desk.txt  groundtruth_fr2xyz.txt
include/: CycleTimer.h  EdgeDirectVO.h  Frame.h  Pose.h  Sequence.h  Settings.h  Statistics.h  StructuredForests.h  Trajectory.h
src/: EdgeDirectVO.cpp  Frame.cpp  Pose.cpp  Sequence.cpp  Statistics.cpp  Trajectory.cpp  main.cpp
